--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <header>
         <div class="container">
             <div class="profile-section">
-                <img src="pic.jpg" alt="Aryan Kore" class="profile-image">
+                <img src="kore.jpeg" alt="Aryan Kore" class="profile-image">
                 <h1>Aryan Kore</h1>
             </div>
             <div class="profile-info">
